fix spacing error
items aligning on the left so change align-content to end

--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -19,3 +19,12 @@ nav {
   justify-content: center;
   flex-direction: column;
 }
+
+div.new-tweet {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: end;
+  align-items: center;
+}
